src/objects/Funding_Source__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Sources</relationshipLabel>
        <relationshipName>Funding_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_amount__c</fullName>
        <label>Funding amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_type__c</fullName>
        <label>Funding type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Teaching Assistantship</fullName>
                </value>
                <value>
                    <fullName>Graduate Assistantship</fullName>
                </value>
                <value>
                    <fullName>Tuition Remission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Funding Source</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Funding Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>